Corrected layout issues and responsiveness.

--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,7 @@ body {
   width: 40px;
   height: auto;
 }
+
+.dropDown {
+  left: -40px !important;
+}
